# python_bookstore

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml
bookstore_python/: asgi.py  settings.py  settings2.py  urls.py  views.py  wsgi.py
github/workflows/: workflow-pr.yaml
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_models/: test_category.py  test_product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
